--- a/medial-queries2/index.html
+++ b/medial-queries2/index.html
@@ -8,10 +8,12 @@
   <body>
     <div class="container">
       <div class="a">a</div>
-      <div class="b">b</div>
-      <div class="c">c</div>
-      <div class="d">d</div>
-      <div class="e">e</div>
+      <div class="small">
+        <div class="b">b</div>
+        <div class="c">c</div>
+        <div class="d">d</div>
+        <div class="e">e</div>
+      </div>
       <div class="f">f</div>
     </div>
   </body>
